examples/test/testpolicy17911.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17911
  namespace: namespace470
spec:
  podSelector:
    matchLabels:
      key19: value31
      key28: value25
      key18: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value43
      podSelector:
        matchLabels:
          key33: value21
          key26: value5
